# bioinfo-project

./: .gitignore  CMakeLists.txt  FourRussians.cpp  FourRussians.h  LICENSE.md  Makefile  README.md  TableBlock.cpp  TableBlock.h  ThreadPool.h  edlib.cpp  generator.cpp  input10.txt  main.cpp  output.txt  test.bat  test.sh
documentation/: .~lock.projekt4RussiansCepoLokotar.odt#  projekt4RussiansCepoLokotar.odt
src/: FourRussians.cpp  FourRussians.h  Makefile  generator  generator.cpp  input.txt  main  main.cpp
tables__/: CMakeLists.txt  TableBlock.cpp  TableBlock.h  main.cpp
tests/: input1000000.txt  input1000000x10000.txt  input1000000x50.txt  test.sh
